[gd_scene load_steps=4 format=3 uid="uid://dqxthbc3g0l2v"]

[ext_resource type="Script" path="res://ui/npc_interact_ui.gd" id="1_px87r"]
[ext_resource type="FontFile" uid="uid://sj6nlgwd3wm0" path="res://asset/font/AquinoDemo-511lj.ttf" id="2_nskku"]
[ext_resource type="Texture2D" uid="uid://p73ulmivegfh" path="res://asset/sprite/ui/square.png" id="3_61gq5"]

[node name="NPCInteractUI" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = -128.0
offset_right = 224.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_px87r")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 64.0
grow_horizontal = 2
color = Color(0.121569, 0.121569, 0.121569, 0.827451)

[node name="NPCName" type="Label" parent="."]
layout_mode = 0
offset_left = 221.0
offset_top = 8.0
offset_right = 437.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("2_nskku")
text = "Evil barracuda"
horizontal_alignment = 2
vertical_alignment = 2
autowrap_mode = 2

[node name="PlayerName" type="Label" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 8.0
offset_right = 205.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("2_nskku")
text = "You"
vertical_alignment = 2

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 64.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 1
tabs_visible = false

[node name="Normal" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="PlayerStat" type="Label" parent="TabContainer/Normal"]
layout_mode = 0
offset_left = 13.0
offset_top = 16.0
offset_right = 168.0
offset_bottom = 138.0
theme_override_fonts/font = ExtResource("2_nskku")
text = "FOR: 10
INT: 10
STR: 10
HAR: 10
YEE: 10"

[node name="EnemyStat" type="Label" parent="TabContainer/Normal"]
layout_mode = 0
offset_left = 277.0
offset_top = 16.0
offset_right = 432.0
offset_bottom = 63.0
theme_override_fonts/font = ExtResource("2_nskku")
text = "FOR: 10
INT: 10
STR: 10
HAR: 10
YEE: 10"
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Normal"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -123.0
offset_top = -48.0
offset_right = 123.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0

[node name="FightButton" type="Button" parent="TabContainer/Normal/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nskku")
theme_override_font_sizes/font_size = 20
text = "Fight"

[node name="StealButton" type="Button" parent="TabContainer/Normal/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nskku")
theme_override_font_sizes/font_size = 20
disabled = true
text = "Steal"

[node name="Leave" type="Button" parent="TabContainer/Normal/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nskku")
theme_override_font_sizes/font_size = 20
text = "Leave
"

[node name="Fight" type="Control" parent="TabContainer"]
layout_mode = 2

[node name="PlayerHPBar" type="TextureProgressBar" parent="TabContainer/Fight"]
layout_mode = 0
offset_left = 13.0
offset_top = 8.0
offset_right = 205.0
offset_bottom = 32.0
value = 75.0
nine_patch_stretch = true
texture_under = ExtResource("3_61gq5")
texture_progress = ExtResource("3_61gq5")
tint_progress = Color(0.0705882, 1, 0, 1)

[node name="Label" type="Label" parent="TabContainer/Fight/PlayerHPBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.5
offset_top = -8.0
offset_right = 20.5
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "100/100"

[node name="EnemyHPBar" type="TextureProgressBar" parent="TabContainer/Fight"]
layout_mode = 0
offset_left = 245.0
offset_top = 8.0
offset_right = 437.0
offset_bottom = 32.0
value = 75.0
fill_mode = 1
nine_patch_stretch = true
texture_under = ExtResource("3_61gq5")
texture_progress = ExtResource("3_61gq5")
tint_progress = Color(0.0705882, 1, 0, 1)

[node name="Label" type="Label" parent="TabContainer/Fight/EnemyHPBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.5
offset_top = -8.0
offset_right = 20.5
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "100/100"

[node name="BattleLog" type="RichTextLabel" parent="TabContainer/Fight"]
layout_mode = 0
offset_left = 29.0
offset_top = 40.0
offset_right = 405.0
offset_bottom = 112.0
bbcode_enabled = true
text = "You attacked the [color=red]enemy[/color] for [color=yellow]10[/color] damage.
Enemy attacked you for 5 damage.
"

[node name="PlayerActions" type="GridContainer" parent="TabContainer/Fight"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -208.0
offset_top = -128.0
offset_right = 208.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0
columns = 2

[node name="AttackButton" type="Button" parent="TabContainer/Fight/PlayerActions"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nskku")
text = "Attack"
text_overrun_behavior = 3
clip_text = true

[node name="SpecialButton" type="Button" parent="TabContainer/Fight/PlayerActions"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nskku")
text = "Special"
text_overrun_behavior = 3

[node name="DefendButton" type="Button" parent="TabContainer/Fight/PlayerActions"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nskku")
text = "Defend"
text_overrun_behavior = 3

[node name="EscapeButton" type="Button" parent="TabContainer/Fight/PlayerActions"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nskku")
text = "Escape"
text_overrun_behavior = 3

[node name="SkillDesc" type="Label" parent="TabContainer/Fight"]
layout_mode = 2
offset_left = 13.0
offset_top = 200.0
offset_right = 437.0
offset_bottom = 248.0
theme_override_colors/font_color = Color(0.65098, 0.65098, 0.65098, 1)
theme_override_font_sizes/font_size = 14
text = "Attack - Deal damage to enemy based on your STR.
Special - Deal damage to enemy based on your 2x STR, but cost 20 stamina.
Defend - Reduce damage take this turn by 50% and recover 10% stamina.
"

[connection signal="pressed" from="TabContainer/Normal/HBoxContainer/FightButton" to="." method="_on_fight_button_pressed"]
[connection signal="pressed" from="TabContainer/Normal/HBoxContainer/Leave" to="." method="_on_leave_pressed"]
[connection signal="pressed" from="TabContainer/Fight/PlayerActions/AttackButton" to="." method="_on_attack_button_pressed"]
[connection signal="pressed" from="TabContainer/Fight/PlayerActions/SpecialButton" to="." method="_on_special_button_pressed"]
[connection signal="pressed" from="TabContainer/Fight/PlayerActions/DefendButton" to="." method="_on_defend_button_pressed"]
[connection signal="pressed" from="TabContainer/Fight/PlayerActions/EscapeButton" to="." method="_on_escape_button_pressed"]
